[JENKINS-68860] `hpi:run` does not add `Add-Opens` directives for Java 17 (#507)